# PD

./: .gitignore  README.md  pyproject.toml
picasso/api/: models.py  serializer.py  urls.py  views.py
picasso/api/migrations/: 0001_initial.py  0002_alter_file_file.py
picasso/picasso/: celery.py  settings.py  urls.py
